# CmakeTUT

./: README.md
cmakeDemo/: Allclean  Allrun  CMakeLists.txt
cmakeDemo/include/: lib_demo.h  main.h
cmakeDemo/src/: CMakeLists.txt  lib_demo.cpp  main.cpp
cmakeHelloWorld/: Allrun  CMakeLists.txt  hello.cpp
cmakeProject/: Allrun  CMakeLists.txt  main.cpp
cmakeProject/addlib/: CMakeLists.txt  library.cpp  library.h
